# polygon_triangulation_test

./: .clang-format  .gitignore  CMakeLists.txt  CppProperties.json  LICENSE  README.md  allocator.h  allocator.natvis  node.h  node_allocator.h  primitives.cpp  primitives.h  seidel.cpp  seidel.h  trapezoidMap.cpp  trapezoidMap.h  trapezoidMapP.cpp  trapezoidMapP.h  triangulator.cpp  triangulator.h  vec2.h  views.natvis
experimental/: node_allocator.h  seidel.h
src/: allocator.h  primitives.cpp  primitives.h  threadPool.h  trapezoidMapP.cpp  trapezoidMapP.h  triangulator.cpp  triangulator.h  vec2.h
src/fist/: allocator.h  earcut.cpp  earcut.h  triangulator.cpp  triangulator.h  vec2.cpp  vec2.h  views.natvis
src/fist_2/: allocator.h  triangulator.cpp  triangulator.h
src/plasma/: IndexPool.hpp  TrapezoidMap.cpp  TrapezoidMap.hpp
src/seidel/: allocator.h  trapezoidMapP.cpp  trapezoidMapP.h  triangulator.cpp  triangulator.h  vec2.cpp  vec2.h
src/tes/: IndexPool.hpp  TrapezoidMap.cpp  TrapezoidMap.hpp
tests/: CMakeLists.txt  basic.cpp  common.h  lnlncross.cpp
tests/seidel/: common.h  ptptco.cpp
viewer/: CMakeLists.txt
viewer/include/: easyx.h  graphics.h
viewer/lib/VC2008/x64/: EasyXa.lib  EasyXw.lib
viewer/lib/VC2008/x86/: EasyXa.lib  EasyXw.lib
viewer/lib/VC2015/x64/: EasyXa.lib  EasyXw.lib
viewer/lib/VC2015/x86/: EasyXa.lib  EasyXw.lib
viewer/lib/VC6/x86/: EasyXa.lib  EasyXw.lib
viewer/src/: meter.cpp  mimi.cpp  polygon_generator.cpp  polygon_generator.h  viewable.cpp  viewable.h  window.cpp  window_cdt.cpp  window_earcut.cpp
